# fixflow-mcp

./: .gitignore  CONTRIBUTING.md  Dockerfile  GITHUB_SETUP.md  LICENSE  PRD_LANDING.md  PROJECT.md  README.md  RELEASE_INSTRUCTIONS.md  RELEASE_NOTES.md  TASKS.md  commit_msg.txt  do_commit.bat  e2e_test.py  experiment_search.py  package.json  pyproject.toml  server.json  tech-summary-v3-en.md  tech_kb_schema.sql
.agents/skills/creating-kb-cards/resources/: schema.sql
.agents/skills/creating-kb-cards/scripts/: validate.py
.agents/skills/deploying-mcp-to-render/: SKILL.md
.agents/skills/deploying-mcp-to-render/resources/: Dockerfile.template
.github/workflows/: docker.yml
fastmcp_docs_server/: README.md  __main__.py  requirements.txt  server.py  tech-summary-v3-en.md
fastmcp_docs_server/skills/: creating-kb-cards.md
fastmcp_docs_server/tech_kb/: index.json
fastmcp_docs_server/tech_kb/devops/: CROSS_DOCKER_001.md  CROSS_GIT_001.md
fastmcp_docs_server/tech_kb/terminal/: WIN_TERM_042.md
web/: index.html
