[project]
name = "fixflow-mcp"
version = "1.0.0"
description = "Community Knowledge Base MCP Server — Stack Overflow for AI Agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "MDS"}]
keywords = ["mcp", "knowledge-base", "ai-agents", "technical-docs", "semantic-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=3.0.0rc1",
    "PyYAML",
    "supabase>=2.0.0",
]

[project.scripts]
fixflow-mcp = "fastmcp_docs_server.server:main"

[project.urls]
Homepage = "https://github.com/mds-tech/fixflow-mcp"
Repository = "https://github.com/mds-tech/fixflow-mcp"
Issues = "https://github.com/mds-tech/fixflow-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastmcp_docs_server"]
